@@ -1,3 +1,12 @@
+20080502:
+- better support for device special files (files under /dev)
+- update to always handle largefile correctly
+- fix conifgure script for sendfile functionality
+- minor docu updates
+- minor build update
+  (compile with -c -O, mbuffer.o is dependent on Makefile)
+- allow in-memory locking of file based buffers
+
 20080329:
 - configure should check if ST_BLKSIZE feature is available
 - compile with -O instead of -g per default
